--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="https://i.imgur.com/NyPZxPZ.png" type="image/png">
 
     <!-- External CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/LupineVault/EditPro@main/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-okaidia.min.css" rel="stylesheet" />
     <style>
         .repo-link-container {
@@ -69,7 +69,7 @@
 <input type="file" id="fileInput" accept=".html" style="display: none;" onchange="handleFileUpload(event)">
 
 <!-- External JavaScript -->
-<script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/LupineVault/EditPro@main/script.js"></script>
 
 </body>
 </html>
