--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
             margin-top: 20px;
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/gh/LupineVault/stars@8c655dc0f1e096b8f5c95aa6a2decf818771614a/stars.js"></script>
 </head>
 <body>
 <div class="container">
     <h1>
         <img src="https://i.imgur.com/NyPZxPZ.png" alt="Logo">
-        HTML Unleashed
+        HypertextGO
     </h1>
     <button onclick="openAboutModal()" class="about-button">About</button>
     <div class="github-link">
-        <a href="https://github.com/purrlyy/html-unleashed" target="_blank">Please ⭐ this project on GitHub</a>
+        <a href="https://github.com/LupineVault/EditPro" target="_blank">Please ⭐ this project on GitHub</a>
     </div>
     <div class="editor-container">
         <button onclick="openFileManager()" class="file-manager-toggle">
@@ -77,6 +78,7 @@
 
 <!-- External JavaScript -->
 <script src="https://cdn.jsdelivr.net/gh/LupineVault/EditPro@main/script.js"></script>
+
 
 </body>
 </html>
