Update about section in index.html to reflect project rebranding and new features

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 </div>
 
 <div id="aboutModal" class="modal">
-    <h2>About HTML Unleashed</h2>
-    <p>HTML Unleashed is a tool designed to empower students and developers alike by providing an innovative way to work with HTML code effortlessly. Created by Purrly, this project was born out of the need to bypass restrictive environments that limit creativity and exploration in coding. With HTML Unleashed, users can encode their HTML into a Data URL, allowing them to execute and test their code directly within a browser without relying on external tools or servers.</p>
+    <h2>About HypertextGO</h2>
+    <p>HypertextGo is a fork of <a href="https://github.com/tazz-devv/HTML-unleashed" target="_blank">HTML Unleashed by Taz</a> which brings you AI, improved UI, and automatic CDN converting with GitHub support</p>
     <button class="close-button" onclick="closeAboutModal()">Close</button>
 </div>
 
