--- a/ai.html
+++ b/ai.html
@@ -12,7 +12,7 @@
         * { box-sizing: border-box; }
         body {
             font-family: Arial, sans-serif;
-            background-color: #121212;
+            background-color: #100000;
             color: #fff;
             margin: 0;
             display: flex;
@@ -24,7 +24,7 @@
         .chat-container {
             width: 90%;
             max-width: 600px;
-            border: 1px solid #333;
+            border: 1px solid #0b0b0b;
             background: #1e1e1e;
             padding: 15px;
             border-radius: 10px;
