--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <button onclick="toggleFullscreen()" class="fullscreen-toggle">
             <img src="https://www.freeiconspng.com/uploads/white-full-screen-icon-5.png" alt="Fullscreen Icon">
         </button>
-        <pre id="codeEditor" class="language-html" contenteditable="true" oninput="updateDataUrl()"></pre>
+        <pre id="codeEditor" class="language-none" contenteditable="true" oninput="updateDataUrl()" onpaste="handlePaste(event)"></pre>
     </div>
     </br>
     <div>
-        <h1>HyperTextGO AI</h1>
+        <h1>HypertextGO AI</h1>
         <iframe id="aiIframe" width="100%" height="500px"></iframe>
     </div>
     
@@ -96,6 +96,11 @@
             })
             .catch(error => console.error('Error fetching the iframe content:', error));
     });
+    function handlePaste(event) {
+    event.preventDefault();
+    const text = (event.clipboardData || window.clipboardData).getData('text');
+    document.execCommand('insertText', false, text);
+}
 </script>
 
 </body>
