--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <div id="aboutModal" class="modal">
     <h2>About HypertextGO</h2>
-    <p>HypertextGo is a fork of <a href="https://github.com/tazz-devv/HTML-unleashed" target="_blank">HTML Unleashed by Taz</a> which brings you AI, improved UI, and automatic CDN converting with GitHub support<br>Version 0.2.1</p>
+    <p>HypertextGo is a fork of <a href="https://github.com/tazz-devv/HTML-unleashed" target="_blank">HTML Unleashed by Taz</a> which brings you AI, improved UI, and automatic CDN converting with GitHub support<br>Updated by <a href="https://rhw.one" target="_blank">RHW</a><br>Version 0.2.1</p>
     <button class="close-button" onclick="closeAboutModal()">Close</button>
 </div>
 
